compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__correct_pipe_arity_error_location.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1108
expression: "fn x(x, y) { x }\nfn main() { 1 |> x() }"

---
error: Incorrect arity
  ┌─ /src/one/two.gleam:2:18
  │
2 │ fn main() { 1 |> x() }
  │                  ^^^ expected 2 arguments, got 0


